resources/assets/sass/shared/_bill-lists.scss
.bill {
    margin-bottom: 15px;
    padding-bottom: 15px;
    border-bottom: 1px solid $border-color;

    .bill__header {
        margin-bottom: 10px;
        display: flex;

        .bill__name,
        .bill__title{
            display: inline-block;
            margin: 0 20px;
            font-size: 1.75rem;
            line-height: 1em;
        }
        .bill__name {
            margin: 0;
            white-space: nowrap;
            font-weight: bold;
        }

        .bill__tags {
            font-size: 1.25rem;
            color: $secondary-text;
        }

        .bill__actions {
            margin-left: auto;
        }
    }

    .bill__notification-controls {
        .bill__notification-options {
            label {
                margin-right: 25px;
                font-weight: normal;

                input[type=checkbox] {
                    margin-left: 5px;
                }
            }
        }
    }

    .bill__description-toggle {
        margin-top: 1em;
        color: #000;
    }
}

.bill--tracked {
    .bill__header {
        color: #3498db;
    }
}

.bill-list__loading {
    margin: 2em 0;
    text-align: center;
    color: $secondary-text;
    font-style: italic;
}


.bill-table {
    width: 100%;

    thead {
        td {
            color: $text-color;
        }
        td.is-sorted {
            font-weight: bold;
            color: #000;
        }
    }
    .sort-indicator {
        float: right;
    }

    td {
        padding: 5px 10px;
        vertical-align: top;
        border: 1px solid $border-color;
        border-color: $border-color lighten($border-color, 7%)
    }
    td:first-child {
        padding: 5px 10px;
    }

    .bill-table__cell-header,
    .bill-table__action-type {
        font-size: 1em;
    }
    .bill-table__cell-body,
    .bill-table__action-details {
        font-size: 1.25rem;
        color: $secondary-text;
    }
    .bill-table__bill-name {
        width: 60px;
    }
    .bill-table__bill-actions {
        width: 180px;
    }
    .bill-table__alert-controls {
        width: 150px;

        label {
            display: inline-block;
            margin-right: 10px;
        }
        label:last-child {
            margin-right: 0;
        }
    }
}


.filters {
    margin-bottom: 20px;

}

.search {
    display: flex;


    .search__input {
        width: 100%;
        height: auto;
    }
}

